--- a/AccountManagers.Presentation/View/MainWindow.xaml
+++ b/AccountManagers.Presentation/View/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:vm="clr-namespace:AccountManagers.Presentation.ViewModel"
+        xmlns:vm="clr-namespace:AccountManagers.Presentation.ViewModel" d:DataContext="{d:DesignInstance Type=vm:UserViewModel}"
         mc:Ignorable="d"
         Title="Account Managers" Height="450" Width="800">
 
@@ -19,15 +19,19 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <DataGrid x:Name="UsersGrid" Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" CanUserAddRows="False" Height="200" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Right"
+        <Grid IsEnabled="{Binding IsViewUsers, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="1">
+            <DataGrid x:Name="UsersGrid"  AutoGenerateColumns="False" CanUserAddRows="False" Height="200" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Right"
                   ItemsSource="{Binding Users, Mode=OneWay}"
-                  SelectedItem ="{Binding SelectedUser, Mode=TwoWay}">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" Binding="{Binding Id}" Visibility="Hidden"/>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"  IsReadOnly="True"/>
-                <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="200"  IsReadOnly="True"/>
-            </DataGrid.Columns>
-        </DataGrid>
+                  SelectedItem ="{Binding SelectedUser, Mode=TwoWay}"
+                  >
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" Visibility="Hidden"/>
+                    <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="100"  IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Email" Binding="{Binding Email}" Width="200"  IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+            
 
         <WrapPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left">
             <GroupBox Header="User details">
@@ -47,13 +51,13 @@
                     </Grid.RowDefinitions>
 
                     <Label Grid.Column="0" Grid.Row="1" Margin="2" Content="Name" HorizontalAlignment="Left" />
-                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" x:Name="Name" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.Name,UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" x:Name="Name" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.Name,UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True}" />
 
                     <Label Grid.Column="0" Grid.Row="2" Margin="2" Content="Email" HorizontalAlignment="Left" />
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" x:Name="Email" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.Email,UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" x:Name="Email" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                     <Label Grid.Column="0" Grid.Row="3" Margin="2" Content="CNP" HorizontalAlignment="Left" />
-                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" x:Name="CNP" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.CNP, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" x:Name="CNP" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.CNP, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True}" />
 
                     <Label Grid.Column="0" Grid.Row="4" Margin="2" Content="NoOfClients" HorizontalAlignment="Left" />
                     <TextBox Grid.Column="1" Grid.Row="4" Margin="2" x:Name="NoOfClients" HorizontalAlignment="Stretch" Text="{Binding SelectedUser.NoOfClients,UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
@@ -76,22 +80,18 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Button Grid.Column="0" Grid.Row="0" Content="Add User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
-                        />
-                
-                <Button Grid.Column="0" Grid.Row="1" Content="New User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
+                <Button Grid.Column="0" Grid.Row="0" Content="New User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
                         Command="{Binding AddUserCommand}"/>
 
-                <Button  Grid.Column="0" Grid.Row="2" Content="Edit User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
+                <Button  Grid.Column="0" Grid.Row="1" Content="Edit User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
                          Command="{Binding EditUserCommand}" />
 
-                <Button  Grid.Column="0" Grid.Row="3" Content="Delete User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
+                <Button  Grid.Column="0" Grid.Row="2" Content="Delete User" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
                          Command="{Binding DeleteUserCommand}" />
 
-                <Button  Grid.Column="0" Grid.Row="4" Content="Export to CSV" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
+                <Button  Grid.Column="0" Grid.Row="3" Content="Export to CSV" Margin="10" Height="30" Width="100" HorizontalAlignment="Center"
                          Command="{Binding ExportToCSVCommand}" />
             </Grid>
         </WrapPanel>
